@@ -1,3 +1,10 @@
+Mon,  2 Apr 2007 14:11:29 +0200 <thp@perli.net>
+        * src/gpodder/libgpodder.py: Added some sanity checks to get_size()
+        * src/gpodder/gpodder.py: Implemented a message dialog informing the 
+          user about a failed download directory move operation; thanks to 
+          Andy (apblist speakeasy.net) for suggesting this usability
+          improvement (in case of write errors, etc..)
+
 Mon,  2 Apr 2007 13:42:21 +0200 <thp@perli.net>
         * src/gpodder/libplayers.py: Added /usr/share/applications/kde/ to 
           list of directories to search for ".desktop" files so that gPodder 
